--- a/_posts/2024-05-27-hello-2024.markdown
+++ b/_posts/2024-05-27-hello-2024.markdown
@@ -4,7 +4,7 @@ title:      "Hello 2024"
 subtitle:   " \"Hello World, Hello Blog\""
 date:       2024-05-27 12:00:00
 author:     "pqqqYa"
-header-img: "img/post-bg-2015.jpg"
+header-img: "img/bg-little-universe.jpg"
 catalog: true
 tags:
     - int
