更新 2024-05-28-初见鸣潮体验报告.markdown

--- a/_posts/2024-05-28-初见鸣潮体验报告.markdown
+++ b/_posts/2024-05-28-初见鸣潮体验报告.markdown
@@ -29,7 +29,7 @@ tags:
 
 作为一款开放世界角色扮演游戏，笔者认为最重要的就是角色的设计。鸣潮在这方面有些是值得称赞的，但是这只是一部分的内容。
 
-**"小青龙"忌炎**，从人物立绘，技能特效，配音都很到位。尤其是在体验关卡中，能明显感觉到是有想法在里面的。
+"小青龙"忌炎，从人物立绘，技能特效，配音都很到位。尤其是在体验关卡中，能明显感觉到是有想法在里面的。
 
 但是"小道士"鉴心和"芝士雪豹"凌阳就有些不太理解了。不管是人物本身的设计还有剧情等等，剧情就在后面吐槽，这里讨论人物本身。
 
