--- a/_posts/2024-05-29-计算机网络基础学习笔记.markdown
+++ b/_posts/2024-05-29-计算机网络基础学习笔记.markdown
@@ -395,3 +395,156 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 吉比特以太网
 
 * 全双工和半双工都可以；1Gb/s；
+
+# 第四章  网络层
+## 4.1 虚电路服务和数据包服务的对比
+
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/comparison1.png)
+
+## 4.2 虚拟互连网络（IP网）
+
+ 使用路由器解决各种异构的物理网络连接在一起的问题；
+
+## 4.3 分类的IP地址
+
+IP地址由ICANN进行分配（中国向APINC）；
+
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/IPaddress.png)
+
+A类地址（2^31——50%）
+
+* 网络号全0表示本机，全1表示环回测试 2^7 -2
+* 主机号全0表示本主机的网络地址，全1表示所有主机 2^24 - 2
+
+B类地址
+
+* 网络号（128.0.0.0不可用）2^14 - 1
+* 主机号跟A类一样 2^16 - 2
+
+C类地址
+
+* 网络号（192.0.0.0不可用）2^21 - 1
+* 主机号（同上）2^8 - 2
+
+特点
+
+* 路由器仅根据网络号来转发分组
+* 多归属主机——一个路由器至少要有两个不同的IP地址（每个接口一个）
+* 用网桥或转发器连接的局域网仍属于一个网络（相同网络号），用路由器才能连接不同网络
+
+## 4.4 IP地址与硬件地址
+
+  * 使用IP地址是为了隐蔽各种底层网络的复杂性而便于分析和研究问题；
+  * 数据链路层看不到数据包的IP地址
+  * 路由器只根据目的IP地址的网络号进行路由选择；
+
+## 4.5 ARP（地址解析协议）和RARP
+
+* ARP——IP地址转为MAC地址
+* ARP cache——本局域网的主机和路由表的IP地址到MAC地址的映射表
+* 请求是广播，响应是单播，一次请求响应，两边同时把双方的信息写进ARP cache
+* 不同局域网的主机，要通过路由器进行ARP查询；
+
+## 4.6 IP数据包的格式
+
+* 首部20字节，固定的
+
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/IPdata.png)
+
+* 总长度——不少于576字节
+* 标识，标志，片偏移——用于分片
+* TTL（现为跳数限制）——在经过路由器时才减1
+* 协议（协议名，协议字段值）
+	* ICMP，1
+	* IGMP，2
+	* TCP，6
+	* UDP，17
+* 首部检验和——只检验首部，16位反码运算相加再求反码，检验时一样，得到为0即无差错
+* IP 首部的可变部分就是一个选项字段，用来支持排错、测量以及安全等措施。
+## 4.7 IP层转发分组的流程
+
+ * 从一个路由器转发到下一个路由器（信息：目的网络地址，下一跳地址）；
+ * 特定主机路由——对特定的目的主机指明一个路由，方便控制网络和测试网络；
+ * 默认路由（0.0.0.0）——下一跳路由器的地址不在IP数据包里，而在MAC帧里（转为MAC地址）
+ * 分组转发算法：直接交付→特定主机路由→下一跳路由器→默认路由。
+
+## 4.8 划分子网
+
+ * IP地址::={网络号，子网号，主机号}
+ * 不改变网络号
+ * 子网掩码：没必要是连续的1
+ * 增加了灵活性，减少了连接在网络上的主机总数
+ * 同样的IP地址和不同的子网掩码可以得出相同的网络地址
+ * 使用子网时分组的转发，增加了子网掩码
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/ChildNet.png)
+
+## 4.9 CIDR（无分类编址）
+
+* IP地址：：={网络前缀，主机号}；/后表示网络前缀的位数
+* 最小地址（全0），最大地址（全1）
+* 路由聚合——构成超网
+
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/CIDR.png)
+
+## 4.10 ICMP（网际控制报文协议）
+
+差错报文
+* 3——终点不可达
+* 4——源点抑制(Source quench)，放慢发送速率 
+* 11——时间超过，TTL=0
+* 12——参数问题，首部参数有问题
+* 5——改变路由（重定向）(Redirect) 
+
+以下情况不发送差错报文
+
+* 对 ICMP 差错报告报文不再发送 ICMP 差错报告报文。
+* 对第一个分片的数据报片的所有后续数据报片都不发送 ICMP 差错报告报文。
+* 对具有多播地址的数据报都不发送 ICMP 差错报告报文。
+* 对具有特殊地址（如127.0.0.0 或 0.0.0.0）的数据报不发送 ICMP 差错报告报文。
+
+询问报文
+
+* 8或0——回送请求和回答报文，测试目的站是否可达；
+* 13或14——时间戳请求和回答报文，时钟同步和测量时间；
+
+应用
+
+* Ping——回送请求和回答报文；没有经过TCP和UDP
+* Tracert——时间差错报文和终点不可达报文（最后）
+
+## 4.11 路由选择协议
+
+两类
+
+* 静态路由选择策略（非自适应路由选择）；
+* 动态路由选择策略（自适应路由选择）；
+
+分层次的路由选择协议
+
+* AS：
+* IGB（内部网关协议）——RIP（基于距离向量的路由选择）和OSPF；域内路由选择
+* EGB（外部网关协议）——BGP-4；域间路由选择
+
+## 4.12 路由器的构成
+
+路由选择
+
+* 核心——路由选择处理机；
+
+分组转发
+
+* 组成——交换结构，输入端口，输出端口；
+	* 路由选择，涉及到多个路由器，总是用软件
+	* 转发，只涉及到一个路由器，可用特殊硬件实现
+* 路由器中的输入或输出队列产生溢出是造成分组丢失的重要原因。 
+* 交换结构三种方法：①通过存储器；②通过纵向；③通过互连网络；
+
+## 4.13 VPN
+
+* 专用地址（可重用地址）：10/8，172.16/12，192.168/16
+* 利用隧道技术实现VPN
+
+## 4.14 NAT
+
+* 安装在路由器上
+* 将本地地址转为全球IP地址
