--- a/_posts/2024-05-29-计算机网络基础学习笔记.markdown
+++ b/_posts/2024-05-29-计算机网络基础学习笔记.markdown
@@ -548,3 +548,301 @@ C类地址
 
 * 安装在路由器上
 * 将本地地址转为全球IP地址
+
+# 第五章
+
+## 5.1 进程之间的通信
+
+* 面向通信部分的最高层；
+* 用户功能中的最低层；
+* 提供应用进程间的逻辑通信；
+
+## 5.2 运输层的端口
+
+* 识别各应用层进程
+* 只具有本地意义
+* 端口范围：①熟知端口（1~1023）；②注册（或登记）端口（1024~49151）；③动态（或客户、短暂）端口号（49152~65535）；
+
+## 5.3 UDP
+
+特点
+
+* 无连接；（减少开销和发送时延）
+* 尽最大努力交付
+* 面向报文；（对报文不分拆，不合并）
+* 没有拥塞控制
+* 支持一对一，一对多，多对一，多对多的交互通信；
+* 首部开销小。（八个字节）
+* 无编号
+
+首部格式
+
+* 源端口2字节
+* 目的端接口2字节
+* 长度2字节
+* 检验和2字节（加上伪首部和数据部分）
+
+## 5.4 TCP
+
+特点
+
+* 进程到进程的通信；（点对点，每个进程都需要一个连接）
+* 流交付服务；（无结构的字节流）
+* 全双工通信；（发送、接收缓存）
+* 复用和分用；（发送——复用，接收——分用）
+* 面向连接的服务；
+* 可靠的服务。（无差错，不丢失，不重复，按序到达）
+
+套接字（socket）
+
+* IP地址加端口号；
+* TCP连接：：={socket1，socket2}；
+
+## 5.5 可靠传输的工作原理
+
+停止等待协议（等待确认后在发送）
+
+* 在发送完一个分组后，必须暂时保留已发送的分组的副本
+* 分组和确认分组都必须进行编号
+* 超时计时器的重传时间应当比数据在分组传输的平均往返时间更长一些
+* 自动重传请求 ARQ
+* 简单，但信道利用率太低
+
+连续ARQ协议
+
+* 发送窗口，累积确认（对按序到达的最后一个分组发送确认）
+
+## 5.6 TCP首部格式
+
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/TCPtitle.png)数据偏移——首部长度（最大60字节）；
+
+* ACK——确认号有效
+* PSH——立即收到响应
+* RST——释放链接
+* SYN——连接请求和连接接受
+* FIN——释放运输连接
+* 窗口——现在允许对方发送的数据量，窗口值是经常在动态变化着；（以字节为单位）
+* 检验和——也要加上伪首部
+* 紧急指针——窗口为0也可以发送紧急数据
+* 选项：MSS（556字节）；窗口扩大（通过左移来扩大）；时间戳（计算RTT）；
+
+## 5.7 TCP可靠传输的实现
+
+以字节为单位的滑动窗口
+
+* 窗口位置由后沿和前沿决定
+* 必须按序确认
+* 发送（接收）缓存>发送（接收）窗口>已发送（按序到达）
+* 接收方要有累计确认的功能；
+
+超时重传时间的选择
+
+* RTT往返时间；
+* RTT加权平均往返时间，来一个算一个，一个一个来算；α对应新样本
+* RTO超时重传时间略大于RTT
+* 重传的报文段不采用其往返时间样本，但每次重传会增加RTO；
+
+ 选择确认SACK
+
+* 首部选项加上SACK；（所需信息过多，可以忽略，选择重传未确认的数据块）
+
+## 5.8 TCP的流量控制
+
+利用滑动窗口实现流量控制
+
+* 发送方的发送窗口不能超过接收方给出的接受窗口的数值；
+* 设置持续计时器来防止窗口由零变为非零导致的僵局。
+
+传输的效率（三种机制）
+
+1. 维持一个等于MSS的变量来控制缓存
+2. 发送方的推送push操作
+3. 计时器期限到了就将缓存数据装入报文段
+
+## 5.9 TCP的拥塞控制
+
+* 拥塞控制是全局的控制，以网络能够承受现有的网络负荷为前提
+* 流量控制是端口的控制
+
+拥塞控制方法
+
+1. 慢开始和拥塞避免
+	* 慢开始：以MSS作为发送窗口大小的初始值（拥塞窗口），每经过一个传输轮次（从发送到确认），cwnd就加倍；慢开始门限作为慢开始和拥塞避免的转换点
+	* 拥塞避免：每一个RTT，cwnd只加1，（线性增长，加法增大）
+	* 出现拥塞时，慢开始门限设置为当前窗口值的一半（乘法减小），cwnd设为1；
+2. 快重传和快恢复
+	* 快重传：收到三个重复确认立即发送未被确认的报文段
+	* 快恢复：乘法减小后执行加法增大
+
+RED随机早期检测
+
+* 避免全局同步（多个TCP复用）
+* 三个参数：①最小门限②最大门限（最小门限的两倍）③概率p
+* P的计算方法
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/RED-P.png)
+
+## 5.10 TCP的运输连接管理
+
+采用客户服务器的连接方式
+
+三个阶段：
+
+1. 连接建立；
+	* 三次握手，SYN报文不携带数据，但消耗序号；ACK报文不携带数据，不消耗序号；
+2. 数据传输；
+3. 连接释放；
+
+FIN段不携带数据，但消耗掉一个序号；
+
+# 第六章 应用层
+
+## 6.1 DNS
+
+计算机用户间接使用DNS；
+
+使用UDP向域名服务器传输DNS请求报文；
+
+结构：采用层次树状结构；域名只是逻辑概念；
+
+域名服务器：
+
+* 以区为管辖单位
+* 根域名服务器→顶级域名服务器（TLD）→权限域名服务器→本地域名服务器
+
+域名解析过程：
+
+* 主机向本地域名服务器的查询采用递归查询；（请求者身份向上递归）
+* 本地域名服务器向根域名服务器的查询采用迭代查询；（常用）
+
+高速缓存：
+
+* 本地域名服务器和主机都会有
+* 有计时器（增加时间减少网络开销，减少时间提高域名转换的准确性）
+
+## 6.2 FTP
+
+提供交互式的访问，允许客户指明文件的类型与格式，并允许文件具有存取权限。
+
+基本工作原理
+
+* 主要功能：减少或消除在不同操作系统下处理文件的不兼容性；
+* 使用TCP可靠的运输服务；使用客户服务器方式；
+* 服务器进程：①主进程：接受新的请求；②从属进程：处理单个请求；
+* 两个并行的连接：①控制连接（端口21）：会话期间一直打开；②数据连接（端口20）：连接客户端和服务器端的数据传送进程。
+
+TFTP(端口号69）
+
+* 使用UDP数据报；
+* 只支持文件传输，不支持交互；
+* 像停止等待协议
+
+特点：
+
+1.  每次传送的数据 PDU 中有 512 字节的数据，但最后一次可不足 512 字节（文件结束的标志，若是512的整数倍则发一个只有首部的数据报文）。
+2. 数据 PDU 也称为文件块(block)，每个块按序编号，从 1 开始。
+3. 支持 ASCII 码或二进制传送。
+4. 可对文件进行读或写。
+5. 使用很简单的首部。
+
+## 6.3 TELNET（终端仿真协议）
+
+客户服务器方式；
+
+传输的格式使用NVT；
+
+## 6.4 万维网
+
+信息储藏所；
+
+分布式超媒体(hypermedia)系统，它是超文本(hypertext)系统的扩充。
+
+客户服务器方式
+
+特点：
+
+* 利用统一资源定位符URL来标志分布在整个因特网上的万维网文档
+* 利用http来实现万维网上的各种链接
+* HTML可以是不同作者创作的不同风格的万维网文档都能在因特网上的各种主机上显示出来
+* 使用搜索引擎让用户能够很方便地找到所需的信息
+
+URL
+
+* 组成： <协议>://<主机>:<端口>/<路径>；
+
+HTTP超文本传送协议
+
+* 面向事务的协议，可靠
+* 本身是无连接的
+* http 1.0是无状态的，每次请求有两倍RTT的开销
+* http 1.1是持续连接，两种工作方式：①非流水线方式：收到响应后再发出请求；②流水线方式：连续发送，只花费一个RTT时间
+* http代理服务器（高速缓存）——存储请求和响应
+* 报文结构（ASCII码）：
+	1. 请求报文=请求行（方法，URL，http的版本），首部行，实体主体
+	2. 响应报文；=状态行（http版本，状态码，简单短语），首部行，实体主体
+* Cookie——在服务器和客户之间传递的状态信息
+
+Html超文本标记语言
+
+* 制作万维网网页的标准语言
+* 实现动态文档：①增加另一个应用程序；②增加一个机制（CGI）
+* CGI——通用网关接口
+* Java技术组成：①程序设计语言；②运行环境；③类库
+* 搜索引擎：①全文检索；②分类目录搜索引擎（人工）；③元搜索引擎（多个引擎聚合）
+
+## 6.5 电子邮件
+
+* 发送邮件的协议：SMTP
+* 读取邮件的协议：POP3 （客户服务器）和 IMAP（联机协议）
+* 用户代理 UA 就是用户与电子邮件系统的接口，是电子邮件客户端软件。
+* 电子邮件由信封(envelope)和内容(content)两部分组成。
+
+## 6.6 DHCP动态主机配置协议
+
+* 协议软件参数化；自动获取；
+* 需要配置的项目
+	1.  IP 地址
+	2. 子网掩码
+	3. 默认路由器的 IP 地址
+	4. 域名服务器的 IP 地址
+
+## 6.7 简单网络管理协议 SNMP
+
+* 并不是行政上的管理
+* 本功能包括监视网络性能、检测分析网络差错和配置网络设备等
+
+# 第七章  网络安全
+
+## 7.1 计算机网络上的与通信有关的四种威胁
+
+截获；中断；篡改；伪造；
+
+## 7.2 主动攻击
+
+1. 更改报文流
+2. 拒绝服务（DoS，DDoS）
+3. 伪造连接初始化
+
+## 7.3 对称秘钥密码体制
+
+DES——64位（56为实际秘钥，8位奇偶校验）；
+
+RSA
+
+* 设有公钥和私钥；私钥由公钥决定，但不能由其推导
+* 加密方法的安全性取决于秘钥的长度以及计算量
+
+![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/RSA.png)
+
+## 7.4 数字签名
+
+报文鉴别；报文的完整性；不可否认；先解后加
+
+
+
+## 后续章节
+
+音视频服务的分类：①流式存储音视频；②流式实况音视频；③交互式音视频。
+
+无线以太网协议——IEEE 802.11；使用CSMA/CA协议（碰撞避免）；
+
+IPV6——128字节（全球48位，子网16位，接口64位）；
