--- a/_posts/2024-05-29-教堂分类.markdown
+++ b/_posts/2024-05-29-教堂分类.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Church classification
-subtitle: Church classification
+subtitle: 西方讲堂分类学习记录
 date: 2024-05-29 10:56:00
 author: pqqqYa
 header-img: img/post/2024-05-29-教堂分类-bg.jpg
@@ -13,7 +13,7 @@ tags:
 
   
 
-> 笔者不对任何宗教，任何相关宗教人物和任何宗教场所等持有负面看法，仅做为无神论者以着唯物史观表达观点
+> 对任何宗教及其相关表示充分的尊重，文章仅以笔者做为无神论者的视角表达观点
 
 
 # 教堂分类
