更新 2024-05-29-计算机网络基础学习笔记.markdown

--- a/_posts/2024-05-29-计算机网络基础学习笔记.markdown
+++ b/_posts/2024-05-29-计算机网络基础学习笔记.markdown
@@ -46,7 +46,7 @@ tags:
 
 两类通讯方式：
 1. 客户服务器方式：客户是服务的请求方，服务器是服务的提供方；客户程序：一对多，必须知道服务器程序的地址；服务程序：可同时处理多个远地或本地客户的请求（被动等待）
-2. 对等连接方式（p2p)：平等的、对等连接通信。既是客户端又是服务端；
+2. 对等连接方式（p2p)：平等的、对等连接通信。既是客户端又是服务端
 
 ### 1.4.2 核心部分
 
@@ -55,7 +55,7 @@ tags:
 交换——按照某种方式动态地分配传输线路的资源：
 1. 电路交换：建立连接（占用通信资源）→通话（一直占用通信资源）→释放资源（归还通信资源）始终占用资源
 2. 报文交换：基于存储转发原理（时延较长）
-3. 分组交换：报文（message）切割加上首部（包头header）形成分组（包packet）；优点：高效（逐段占用链路，动态分配带宽），灵活（独立选择转发路由），迅速（不建立连接就发送分组），可靠（保证可靠性的网络协议）；存储转发时造成时延；后两者不需要预先分配传输带宽；路由器处理分组过程：缓存→查找转发表→找到合适端口；
+3. 分组交换：报文（message）切割加上首部（包头header）形成分组（包packet）；优点：高效（逐段占用链路，动态分配带宽），灵活（独立选择转发路由），迅速（不建立连接就发送分组），可靠（保证可靠性的网络协议）；存储转发时造成时延；后两者不需要预先分配传输带宽；路由器处理分组过程：缓存→查找转发表→找到合适端口
 
 ## 1.5 计算机网络的分类
 
@@ -63,14 +63,14 @@ tags:
 * 按使用者：公用网，专用网
 * 按介质：有线网，光纤网，无线网络
 * 按无线上网方式：WLAN，WWAN（手机）
-* 按通信性能：资源共享，分布式计算机，远程通信网络。
+* 按通信性能：资源共享，分布式计算机，远程通信网络
 
 ## 1.6 计算机网络的性能
 
-1. 速率（比特每秒b/s）：数据量/信息量的单位；
-2. 带宽（两种）：①频域称谓，赫兹Hz，信号具有的频带宽度；②时域称谓，比特每秒（b/s），通信线路的最高数据率；两者本质一样，宽度越大，传输速率自然越高；
+1. 速率（比特每秒b/s）：数据量/信息量的单位
+2. 带宽（两种）：①频域称谓，赫兹Hz，信号具有的频带宽度；②时域称谓，比特每秒（b/s），通信线路的最高数据率；两者本质一样，宽度越大，传输速率自然越高
 3. 吞吐量：单位时间内通过某个网络（或信道、接口）的数据量。受网络的带宽或网络的额定速率的限制。 
-4. 时延：
+4. 时延
 	* 发送时延（传输时延）：发送时延=数据帧长度(b)÷发送速率(b/s)；发生在及其内部的发送器中；
 	* 传播时延：传播时延=信道长度(m)÷电磁波在信道上的传播速率(m/s)；发生在及其外部的传输信道媒体上；
 	* 处理时延：交换结点为存储转发而进行一些必要的处理所花费的时间。
@@ -115,7 +115,7 @@ TCP/IP——事实上的国际标准；
 
 下面的协议对上面的服务用户是透明的。
 
-IP over Everything    Everythin over IP
+IP over Everything    Everything over IP
 
 # 第二章  物理层
 
@@ -137,8 +137,8 @@ IP over Everything    Everythin over IP
 * 双向交替通信（半双工通信）——通信的双方都可以发送信息，但不能双方同时发送(当然也就不能同时接收)。
 * 双向同时通信（全双工通信）——通信的双方可以同时发送和接收信息。
 * 基带信号——来自信源的信号，为使信道能够传输低频分量和直流分量，需要进行调制
-* 基带调制（仅对波形进行变换）；
-* 带通调制（使用载波调制）：①调幅；②调频；③调相；
+* 基带调制（仅对波形进行变换）
+* 带通调制（使用载波调制）：①调幅；②调频；③调相
 
 ![](D:\obsidian\store\Elecbank\post\2024-05-29\信道.png)
 
@@ -164,22 +164,22 @@ IP over Everything    Everythin over IP
 
 非导向型传输媒体：
 
-* 短波通信（靠电离层的反射）；
-* 微波通信：①地面微波接力通信（中继站）；②卫星通信（较大的传播时延）；
+* 短波通信（靠电离层的反射）
+* 微波通信：①地面微波接力通信（中继站）；②卫星通信（较大的传播时延）
 
 ## 2.6 信道复用技术
 
 * 频分复用：所有用户在同样的时间占用不同的资源；
-* 时分复用（同步）：所有用户在不同的时间用同样的频带宽度；（更有利于数字信号的传输）；
-* 统计时分复用（异步）：动态分配时隙；
-* 波分复用：光的频分复用；
+* 时分复用（同步）：所有用户在不同的时间用同样的频带宽度；（更有利于数字信号的传输）
+* 统计时分复用（异步）：动态分配时隙
+* 波分复用：光的频分复用
 * 码分复用（码分多址CDMA）：不同的码型；每个站分配的码片序列不仅必须各不相同，并且还必须互相正交(orthogonal)（相乘为0，0为-1）。在实用的系统中是使用伪随机码序列。
 
-任何一个码片向量和该码片向量自己的规格化内积都是1 ；
+任何一个码片向量和该码片向量自己的规格化内积都是1 
 
-任何一个码片向量和该码片反码的向量自己的规格化内积都是-1 ；
+任何一个码片向量和该码片反码的向量自己的规格化内积都是-1 
 
-任何一个码片向量和其他码片向量的规格化内积都是0；
+任何一个码片向量和其他码片向量的规格化内积都是0
 
 ## 2.7 宽带接入技术
 
@@ -274,7 +274,7 @@ ADSL
 
 局域网的拓扑
 
-* 星形网，环形网（令牌环形），总线网（CSMA/CD和令牌传递），树形网（频分复用的宽带局域网）；
+* 星形网，环形网（令牌环形），总线网（CSMA/CD和令牌传递），树形网（频分复用的宽带局域网）
 
 共享信道：
 
@@ -298,15 +298,15 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 * 碰撞检测（冲突检测）——边发送边监听，发送的不确定性；
 * 半双工通信
 * 争用期（碰撞窗口）——截断二进制指数退避（动态退避）
-* 最短有效帧长度为64字节；
-* 强化碰撞——人为干扰信号；
-* 帧间最小间隔为9.6微秒；
+* 最短有效帧长度为64字节
+* 强化碰撞——人为干扰信号
+* 帧间最小间隔为9.6微秒
 
 # 3.8 使用广播信道的以太网
 
 集线器的星形拓扑
 
-* 物理上星形网，逻辑上总线网；
+* 物理上星形网，逻辑上总线网
 * 多接口：工作在物理层，简单地转发比特，不进行碰撞检测
 
 以太网的信道利用率
@@ -320,7 +320,7 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 * 名字指出我们所要寻找的那个资源，地址指出那个资源在何处，路由告诉我们如何到达该处
 * RA——注册管理机构
 * OUI——组织唯一标识符（公司的）
-* EUI——扩展唯一标识符；
+* EUI——扩展唯一标识符
 * 适配器检测MAC帧中的目的地址是否发往本帧——单播，广播，多播；
 * 最常用的 MAC 帧是以太网 V2 的格式。
 ![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/MACframe.png)
@@ -360,13 +360,13 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 * 具有不同 MAC 子层的网段桥接在一起时时延更大。
 * 广播风暴（网络拥塞）
 
-在转发帧时，不改变帧的源地址；
+在转发帧时，不改变帧的源地址
 
 透明网桥
 
 * 自学习，即插即用（IEEE 802.1D）
-* 组成：地址（源地址）+接口+时间（更新用的）；
-* 生成树算法——任何两个站之间只有一条路径。。。
+* 组成：地址（源地址）+接口+时间（更新用的）
+* 生成树算法——任何两个站之间只有一条路径。
 
 源路由网桥
 
@@ -377,13 +377,13 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 多接口网桥——以太网交换机
 
 * 全双工
-* 独占通信媒体，无碰撞地传输数据；
-* 有存储转发，也有直通（不检查差错，但提高速率减少时延）；
+* 独占通信媒体，无碰撞地传输数据
+* 有存储转发，也有直通（不检查差错，但提高速率减少时延）
 
 虚拟局域网（VLAN）
 
-* 由一些局域网网段构成的与物理位置无关的逻辑组。
-* 同一VLAN的成员可以收到其他成员的广播信息；
+* 由一些局域网网段构成的与物理位置无关的逻辑组
+* 同一VLAN的成员可以收到其他成员的广播信息
 
 ## 3.11 高速以太网（大于100Mb/s）
 
@@ -394,7 +394,7 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 
 吉比特以太网
 
-* 全双工和半双工都可以；1Gb/s；
+* 全双工和半双工都可以；1Gb/s
 
 # 第四章  网络层
 ## 4.1 虚电路服务和数据包服务的对比
@@ -407,7 +407,7 @@ CSMA/CD（载波监听多点接入/碰撞检测）协议
 
 ## 4.3 分类的IP地址
 
-IP地址由ICANN进行分配（中国向APINC）；
+IP地址由ICANN进行分配（中国向APINC）
 
 ![](https://raw.githubusercontent.com/pqqqYa/pqqqYa.github.io/main/img/post/2024-05-29/IPaddress.png)
 
@@ -463,7 +463,7 @@ C类地址
 * IP 首部的可变部分就是一个选项字段，用来支持排错、测量以及安全等措施。
 ## 4.7 IP层转发分组的流程
 
- * 从一个路由器转发到下一个路由器（信息：目的网络地址，下一跳地址）；
+ * 从一个路由器转发到下一个路由器（信息：目的网络地址，下一跳地址）
  * 特定主机路由——对特定的目的主机指明一个路由，方便控制网络和测试网络；
  * 默认路由（0.0.0.0）——下一跳路由器的地址不在IP数据包里，而在MAC帧里（转为MAC地址）
  * 分组转发算法：直接交付→特定主机路由→下一跳路由器→默认路由。
@@ -516,8 +516,8 @@ C类地址
 
 两类
 
-* 静态路由选择策略（非自适应路由选择）；
-* 动态路由选择策略（自适应路由选择）；
+* 静态路由选择策略（非自适应路由选择）
+* 动态路由选择策略（自适应路由选择）
 
 分层次的路由选择协议
 
@@ -529,11 +529,11 @@ C类地址
 
 路由选择
 
-* 核心——路由选择处理机；
+* 核心——路由选择处理机
 
 分组转发
 
-* 组成——交换结构，输入端口，输出端口；
+* 组成——交换结构，输入端口，输出端口
 	* 路由选择，涉及到多个路由器，总是用软件
 	* 转发，只涉及到一个路由器，可用特殊硬件实现
 * 路由器中的输入或输出队列产生溢出是造成分组丢失的重要原因。 
@@ -553,9 +553,9 @@ C类地址
 
 ## 5.1 进程之间的通信
 
-* 面向通信部分的最高层；
-* 用户功能中的最低层；
-* 提供应用进程间的逻辑通信；
+* 面向通信部分的最高层
+* 用户功能中的最低层
+* 提供应用进程间的逻辑通信
 
 ## 5.2 运输层的端口
 
@@ -571,7 +571,7 @@ C类地址
 * 尽最大努力交付
 * 面向报文；（对报文不分拆，不合并）
 * 没有拥塞控制
-* 支持一对一，一对多，多对一，多对多的交互通信；
+* 支持一对一，一对多，多对一，多对多的交互通信
 * 首部开销小。（八个字节）
 * 无编号
 
@@ -624,7 +624,7 @@ C类地址
 * 窗口——现在允许对方发送的数据量，窗口值是经常在动态变化着；（以字节为单位）
 * 检验和——也要加上伪首部
 * 紧急指针——窗口为0也可以发送紧急数据
-* 选项：MSS（556字节）；窗口扩大（通过左移来扩大）；时间戳（计算RTT）；
+* 选项：MSS（556字节）；窗口扩大（通过左移来扩大）；时间戳（计算RTT）
 
 ## 5.7 TCP可靠传输的实现
 
@@ -633,18 +633,18 @@ C类地址
 * 窗口位置由后沿和前沿决定
 * 必须按序确认
 * 发送（接收）缓存>发送（接收）窗口>已发送（按序到达）
-* 接收方要有累计确认的功能；
+* 接收方要有累计确认的功能
 
 超时重传时间的选择
 
-* RTT往返时间；
+* RTT往返时间
 * RTT加权平均往返时间，来一个算一个，一个一个来算；α对应新样本
 * RTO超时重传时间略大于RTT
-* 重传的报文段不采用其往返时间样本，但每次重传会增加RTO；
+* 重传的报文段不采用其往返时间样本，但每次重传会增加RTO
 
  选择确认SACK
 
-* 首部选项加上SACK；（所需信息过多，可以忽略，选择重传未确认的数据块）
+* 首部选项加上SACK（所需信息过多，可以忽略，选择重传未确认的数据块）
 
 ## 5.8 TCP的流量控制
 
@@ -669,7 +669,7 @@ C类地址
 1. 慢开始和拥塞避免
 	* 慢开始：以MSS作为发送窗口大小的初始值（拥塞窗口），每经过一个传输轮次（从发送到确认），cwnd就加倍；慢开始门限作为慢开始和拥塞避免的转换点
 	* 拥塞避免：每一个RTT，cwnd只加1，（线性增长，加法增大）
-	* 出现拥塞时，慢开始门限设置为当前窗口值的一半（乘法减小），cwnd设为1；
+	* 出现拥塞时，慢开始门限设置为当前窗口值的一半（乘法减小），cwnd设为1
 2. 快重传和快恢复
 	* 快重传：收到三个重复确认立即发送未被确认的报文段
 	* 快恢复：乘法减小后执行加法增大
@@ -688,21 +688,21 @@ RED随机早期检测
 三个阶段：
 
 1. 连接建立；
-	* 三次握手，SYN报文不携带数据，但消耗序号；ACK报文不携带数据，不消耗序号；
-2. 数据传输；
-3. 连接释放；
+	* 三次握手，SYN报文不携带数据，但消耗序号；ACK报文不携带数据，不消耗序号
+2. 数据传输
+3. 连接释放
 
-FIN段不携带数据，但消耗掉一个序号；
+FIN段不携带数据，但消耗掉一个序号
 
 # 第六章 应用层
 
 ## 6.1 DNS
 
-计算机用户间接使用DNS；
+计算机用户间接使用DNS
 
-使用UDP向域名服务器传输DNS请求报文；
+使用UDP向域名服务器传输DNS请求报文
 
-结构：采用层次树状结构；域名只是逻辑概念；
+结构：采用层次树状结构；域名只是逻辑概念
 
 域名服务器：
 
@@ -733,7 +733,7 @@ FIN段不携带数据，但消耗掉一个序号；
 TFTP(端口号69）
 
 * 使用UDP数据报；
-* 只支持文件传输，不支持交互；
+* 只支持文件传输，不支持交互
 * 像停止等待协议
 
 特点：
@@ -746,13 +746,13 @@ TFTP(端口号69）
 
 ## 6.3 TELNET（终端仿真协议）
 
-客户服务器方式；
+客户服务器方式
 
-传输的格式使用NVT；
+传输的格式使用NVT
 
 ## 6.4 万维网
 
-信息储藏所；
+信息储藏所
 
 分布式超媒体(hypermedia)系统，它是超文本(hypertext)系统的扩充。
 
