--- a/_posts/2024-05-31-H5+CSS3学习记录.md
+++ b/_posts/2024-05-31-H5+CSS3学习记录.md
@@ -856,10 +856,10 @@ ul{
 
 ~~~css
 .box{
-	Clear: none; 允许有浮动对象
-	Clear: right; 不允许右边有浮动对象
-	Clear: left; 不允许左边有浮动对象
-	Clear:both; 不允许有浮动对象 
+	Clear: none; /*允许有浮动对象*/
+	Clear: right; /*不允许右边有浮动对象*/
+	Clear: left; /*不允许左边有浮动对象*/
+	Clear:both; /*不允许有浮动对象*/
 }
 ~~~
 
