--- a/_posts/2024-05-31-H5+CSS3学习记录.md
+++ b/_posts/2024-05-31-H5+CSS3学习记录.md
@@ -15,7 +15,7 @@ tags:
   - 笔记
 ---
 
-> 文章持续更新中，最近更新日期`2024-6-9`
+> 文章持续更新中，最近更新日期`2024-6-9`（~~不保证100%完工.jpg~~）
 
 > 课程视频[链接](https://www.bilibili.com/video/BV1XF41187ZJ)
 
