--- a/_posts/2024-05-31-H5+CSS3学习记录.md
+++ b/_posts/2024-05-31-H5+CSS3学习记录.md
@@ -15,7 +15,7 @@ tags:
   - 笔记
 ---
 
-> 文章持续更新中，最近更新日期`2024-6-9`（~~不保证100%完工.jpg~~）
+> 文章持续更新中，最近更新日期`2024-9-19`（~~不保证100%完工.jpg~~）
 
 > 课程视频[链接](https://www.bilibili.com/video/BV1XF41187ZJ)
 
@@ -28,6 +28,9 @@ tags:
 	* [Auto Rename Tag](https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag) 自动同步修改头尾标签
 	* [view-in-browser](https://marketplace.visualstudio.com/items?itemName=koppt.vscode-view-in-browser) 跳转浏览器查看文件
 	* [Live Server](https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer) 实时查看页面，开启本地服务器
+* webstrom
+	* 如果你在申请了Jetbrain的student lisence更推荐使用这个，方便快捷。
+	* 搭配字节跳动的`Marscode`Ai插件食用更佳。
 
 
 # I.html基本语法
