--- a/_posts/2024-05-29-C语言学习笔记.md
+++ b/_posts/2024-05-29-C语言学习笔记.md
@@ -136,10 +136,11 @@ int main()
 	* `\n`换行
 	* `\b`退格
 	* `\\`换行符
+
 ~~~c
 #include <stdio.h>  
 int main()  
-{\  
+{
     char c = 'A';  
     printf("%c\n",c+32);//以字符的形式输出  
     printf("%d\n",c+32);//以ASCII码（数值）的形式输出  
@@ -308,7 +309,7 @@ c =
 
 在这里为什么第二个scanf”没有被使用“，因为在标准输入缓冲区其实输入的是`10\n`第一个scanf输入只会读取`10`，会把`\n`留在标准输入缓冲区，直接被char c给存入了。
 
-改正，添加fflush清空标准输入缓冲区
+改正，添加`fflush`清空标准输入缓冲区
 ~~~c
 #include <stdio.h>  
 int main()  
@@ -513,6 +514,7 @@ int a[10]={1,2,3,4,5,6,7,8,9}
 2. 可以只给一部分元素赋值（其余部分默认为0）
 3. 可以全部赋值为0，但必须全部一起赋值为0
 4. 在对全部数组元素赋值时，由于数组的个数已经确定，因此可以不指定数组的长度`int a[]={1,2,3}`（不推荐使用）
+
 ## 5.2 数组访问越界与数组的传递
 
 ### 5.2.1 数组的访问越界
@@ -959,7 +961,7 @@ int main()
 
 ## 7.3 局部变量与全局变量
 
-### 7.3.1 全局变量解析-形参-实参解析
+### 7.3.1 全局变量-形参-实参
 
 不同函数之间传递数据时：
 
