--- a/_posts/2024-05-31-H5+CSS3学习记录.md
+++ b/_posts/2024-05-31-H5+CSS3学习记录.md
@@ -17,7 +17,7 @@ tags:
 
 > 文章持续更新中，最近更新日期`2024-9-19`（~~不保证100%完工.jpg~~）
 
-> 课程视频[链接](https://www.bilibili.com/video/BV1XF41187ZJ)
+> 课程视频[B站链接](https://www.bilibili.com/video/BV1XF41187ZJ)
 
 > 当前进度`058-盒子模型-内边距特性`
 
