--- a/_posts/2024-10-23-C-Notes-DS.md
+++ b/_posts/2024-10-23-C-Notes-DS.md
@@ -4,7 +4,7 @@ title: C语言进阶学习笔记
 subtitle: 数据结构阶段
 date: 2024-10-23 15:21:00
 author: pqqqYa
-header-img: img/post/2024-05-29-计算机网络基础学习笔记-bg.jpg
+header-img: img/post/2024-10-02-CNote-bg.jpg
 catalog: true
 tags:
   - 笔记
