--- a/_posts/2024-10-02-C语言学习笔记.md
+++ b/_posts/2024-10-02-C语言学习笔记.md
@@ -4,7 +4,7 @@ title: C语言基础学习笔记
 subtitle: 初级阶段总结
 date: 2024-10-02 15:56:00
 author: pqqqYa
-header-img: img/post/2024-05-29-计算机网络基础学习笔记-bg.jpg
+header-img: img/post/2024-10-02-CNote-bg.jpg
 catalog: true
 tags:
   - 笔记
