--- a/_posts/2024-05-28-信息与网络安全学习笔记.md
+++ b/_posts/2024-05-28-信息与网络安全学习笔记.md
@@ -98,7 +98,7 @@ tags:
 	2. 密钥为n阶可逆矩阵K，将明文划分为多个n列维向量M，则密文$C=K * M(mod26)$这里就是一个矩阵乘法，i 行乘以M就是C的第 i 个密文。
 	3. 解密则是$M=K^{-1}*C$ $M=\begin{Bmatrix}m_1\\m_2\\m_3\\...\\m_n\end{Bmatrix},C=\begin{Bmatrix}c_1\\c_2\\c_3\\...\\c_n\end{Bmatrix},K=(K_{ij})_{n \times n}=\begin{bmatrix}K_{11}&  K_{12}&  ...&  K_{1n}& \\K_{21}&  K_{22}&  ...&  K_{2n}& \\...&  ...&  ...&  ...& \\K_{n1}&  K_{n2}&  ...&  K_{nn}&\end{bmatrix}$
 
-	\begin{equation}M=\begin{Bmatrix}m_1\\m_2\\m_3\\...\\m_n\end{Bmatrix},C=\begin{Bmatrix}c_1\\c_2\\c_3\\...\\c_n\end{Bmatrix},K=(K_{ij})_{n \times n}=\begin{bmatrix}K_{11}&  K_{12}&  ...&  K_{1n}& \\K_{21}&  K_{22}&  ...&  K_{2n}& \\...&  ...&  ...&  ...& \\K_{n1}&  K_{n2}&  ...&  K_{nn}&\end{bmatrix} \end{equation}
+	$\begin{equation}M=\begin{Bmatrix}m_1\\m_2\\m_3\\...\\m_n\end{Bmatrix},C=\begin{Bmatrix}c_1\\c_2\\c_3\\...\\c_n\end{Bmatrix},K=(K_{ij})_{n \times n}=\begin{bmatrix}K_{11}&  K_{12}&  ...&  K_{1n}& \\K_{21}&  K_{22}&  ...&  K_{2n}& \\...&  ...&  ...&  ...& \\K_{n1}&  K_{n2}&  ...&  K_{nn}&\end{bmatrix} \end{equation}$
 
 ## 1.2对称密码体制
 
