--- a/_posts/2024-05-28-信息与网络安全学习笔记.md
+++ b/_posts/2024-05-28-信息与网络安全学习笔记.md
@@ -90,13 +90,13 @@ tags:
 		3. 一对明文处于对角线，则对应另外两角的字符（同行的互换）
 		4. 一对明文相同或者结尾只有一个字符，则插入一个字符Q（或其它约定字符）
 	* 案例说明：设明文为playfair cipher,密钥为“PLAYFAIR IS A DIGRAM CIPHER”
-		1. 首先构造密钥矩阵<p>$\begin{bmatrix}P&  L&  A&  Y& F& \\ I/J&  R&  S&  D& G& \\ M&  C&  H&  E& B& \\ K&  N&  O&  Q& T& \\ U&  V&  W&  X& Z&\end{bmatrix}$</p>
+		1. 首先构造密钥矩阵$\begin{bmatrix}P&  L&  A&  Y& F& \\ I/J&  R&  S&  D& G& \\ M&  C&  H&  E& B& \\ K&  N&  O&  Q& T& \\ U&  V&  W&  X& Z&\end{bmatrix}$
 		2. 其次，分组明文得：pl ay fa ir ci ph er
 		3. 最后，按照代换规则得到密文：LA YF PY RS MR AM CD
 3. Hill密码
 	1. 将单个明文字母通过线性变换，将它们转换为单个密文字母。解密只需做一次逆变换即可。
 	2. 密钥为n阶可逆矩阵K，将明文划分为多个n列维向量M，则密文$C=K * M(mod26)$这里就是一个矩阵乘法，i 行乘以M就是C的第 i 个密文。
-	3. 解密则是<p>$M=K^{-1}*C$</p> <p>$M=\begin{Bmatrix}m_1\\m_2\\m_3\\...\\m_n\end{Bmatrix},C=\begin{Bmatrix}c_1\\c_2\\c_3\\...\\c_n\end{Bmatrix},K=(K_{ij})_{n \times n}=\begin{bmatrix}K_{11}&  K_{12}&  ...&  K_{1n}& \\K_{21}&  K_{22}&  ...&  K_{2n}& \\...&  ...&  ...&  ...& \\K_{n1}&  K_{n2}&  ...&  K_{nn}&\end{bmatrix}$</p>
+	3. 解密则是$M=K^{-1}*C$ <div>$$M=\begin{Bmatrix}m_1\\m_2\\m_3\\...\\m_n\end{Bmatrix},C=\begin{Bmatrix}c_1\\c_2\\c_3\\...\\c_n\end{Bmatrix},K=(K_{ij})_{n \times n}=\begin{bmatrix}K_{11}&  K_{12}&  ...&  K_{1n}& \\K_{21}&  K_{22}&  ...&  K_{2n}& \\...&  ...&  ...&  ...& \\K_{n1}&  K_{n2}&  ...&  K_{nn}&\end{bmatrix}$$</div>
 
 
 ## 1.2对称密码体制
