--- a/_posts/2024-05-28-信息与网络安全学习笔记.md
+++ b/_posts/2024-05-28-信息与网络安全学习笔记.md
@@ -79,8 +79,8 @@ tags:
 1. Vigenere密码
 	* Vigengere密码使用一个词组作为密钥，第一个密钥字母加密明文的第一个字母，第二个密钥字母加密明文的第二个字母，等所有密钥字母使用完后，密钥又再循环使用（即，后文中未加密明文的第一个对应密钥的第一个，后面一一对应）
 	* 假设数字0~25分布表示26个英文字母a~z
-	* **加密算法**：$C_i = p_i + K_i(mod  26)$
-	* **解密算法**：$C_i = p_i - K_i(mod  26)$
+	* **加密算法**：$$C_i = p_i + K_i(mod  26)$$
+	* **解密算法**：$$C_i = p_i - K_i(mod  26)$$
 2. Playfair密码
 	* **核心思想**：构造5×5的密钥矩阵（密码本），用密钥矩阵按照一定的规则代换。
 	* **矩阵构造方法**：从左至右、从上至下依次填入关键词的字母（若关键词中有重复字母，则第二次出现是略过）。如果没填满，然后再以字母表顺序依次填入其他字母，字母I和J被算为同一个字符。
@@ -90,7 +90,7 @@ tags:
 		3. 一对明文处于对角线，则对应另外两角的字符（同行的互换）
 		4. 一对明文相同或者结尾只有一个字符，则插入一个字符Q（或其它约定字符）
 	* 案例说明：设明文为playfair cipher,密钥为“PLAYFAIR IS A DIGRAM CIPHER”
-		1. 首先构造密钥矩阵$\begin{bmatrix}P&  L&  A&  Y& F& \\ I/J&  R&  S&  D& G& \\ M&  C&  H&  E& B& \\ K&  N&  O&  Q& T& \\ U&  V&  W&  X& Z&\end{bmatrix}$
+		1. 首先构造密钥矩阵$$\begin{bmatrix}P&  L&  A&  Y& F& \\ I/J&  R&  S&  D& G& \\ M&  C&  H&  E& B& \\ K&  N&  O&  Q& T& \\ U&  V&  W&  X& Z&\end{bmatrix}$$
 		2. 其次，分组明文得：pl ay fa ir ci ph er
 		3. 最后，按照代换规则得到密文：LA YF PY RS MR AM CD
 3. Hill密码
@@ -151,7 +151,7 @@ tags:
 
 ### 1.3.1为什么需要?
 
-1. 密钥管理困难：传统密钥管理两两分别用一对密钥时，则n个用户需要$C(n,2)= n(n-1)/ 2$个密钥，当用户量增大时密钥空间急剧增大
+1. 密钥管理困难：传统密钥管理两两分别用一对密钥时，则n个用户需要 $C(n,2)= n(n-1)/ 2$ 个密钥，当用户量增大时密钥空间急剧增大
 2. 陌生人间的保密通信问题
 3. 数字签名的问题：传统加密算法无法实现抗抵赖的需求
 
