updata math latex

--- a/_posts/2024-05-29-计算机网络基础学习笔记.md
+++ b/_posts/2024-05-29-计算机网络基础学习笔记.md
@@ -78,7 +78,7 @@ tags:
 	* 数据的发送速率不是比特在链路上的传播速率。
 5. 时延带宽积：时延带宽积（体积）=传播时延（长）×带宽（截面积），以比特为单位的链路长度
 6. 往返时间（RTT)：简单来说，就是两倍传播时延（实际上还包括处理时延，排队时延，转发时的发送时延）
-7. 利用率：信道利用率→网络利用率（全网络的信道利用率的加权平均值）$D= \frac{D_o}{1-U}$，U为利用率，D为时延，因此利用率不是越高越好。减少方法：增大线路的带宽。
+7. 利用率：信道利用率→网络利用率（全网络的信道利用率的加权平均值）$$D= \frac{D_o}{1-U}$$，U为利用率，D为时延，因此利用率不是越高越好。减少方法：增大线路的带宽。
 
 ## 1.7 非特征性能
 费用，质量，标准化，可靠性，可扩展性和可升级性，易于管理和维护。
