--- a/_posts/2024-10-02-C语言学习笔记.md
+++ b/_posts/2024-10-02-C语言学习笔记.md
@@ -123,7 +123,7 @@ int main()
 #### 2.1.5.1 浮点型常量
 
 * 小数形式：0.003
-* 指数形式：3e-3（$3 × 10^{-3}$）
+* 指数形式：3e-3（$$3 × 10^{-3}$$）
 * 注意：在使用的时候区分数学的e，且e的前面只能是整数且后面不为空的整数
 #### 2.1.5.2 浮点型变量
 
