--- a/_posts/2024-05-27-hello-2024.md
+++ b/_posts/2024-05-27-hello-2024.md
@@ -10,19 +10,12 @@ tags:
     - int
 ---
 
-> “Yeah  It's  on. ”
-
+> “Hello World”
 
 # pqqqYa 的 Blog 开通了
 
 ## 这里有什么？
-技术分享？游戏分享？杂谈？这里什么都可能会有。分享一些感兴趣方向的一些内容
-
-作为一个非计算机专业的学生，但是专业课却总是有一些奇奇怪怪的计算机相关内容，Java，Python，数据库，前端甚至大数据，人工智能等等专业课，再加上一些"兴趣使然"就会经常接触一些技术相关的内容。
-
-再说到游戏，笔者不管是MOBA，FPS，RTS还有MMORPG等等内容都有游玩，甚至深入的游玩。不夸张的说游戏平台如steam等上的流行游戏都有深浅不一的游玩。
-
-最后就是部分就是杂谈了，什么都可能会有。特别军事行动，鱿鱼肥皂，北方光之国，政治军事历史人文什么都可能会有。
+技术分享？杂谈？这里什么都可能会有。分享一些感兴趣方向的一些内容
 
 ## 为什么要分享这些
 
